css/style.css
/* ... */
.introAnimation .character img 
{
  position: absolute;
  z-index: 100;
  width: 130%;
  top: 0%;
}
.introAnimation .landScape .characterBackground 
{
  position: absolute;
  width: 100%;
  height: 170px;
  background-color: var(--color-white);
  border-radius: 170px;
  bottom: 0px;
}
.introAnimation .portrait .characterBackground 
{
  position: absolute;
  width: 100%;
  height: 160px;
  background-color: var(--color-white);
  border-radius: 160px;
  bottom: 0px;
}
/* GAME -----------------------------------------------------------*/
.game.view-container 
{
  position: absolute;

	display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  gap: 1%;
}

/* HUD---------------------------------------------------------*/
#hud
{
    width: 100%;
    height: 7%;
    padding: 0px;

    display: flex;

    align-self: stretch;
    justify-content: space-between;
    justify-self: auto;
    flex-direction: row;
    align-items: center;

    background-color: var(--color-olive);
    border-radius: var(--round-corners);
}
#hud > #score 
{
  position: relative;
  width: 15%;
  height: 75%;
  display: flex;
  padding-left: 4%;
  align-items: center;
}
#hud > #score p
{
  font-size: 1.4em;
  color: var(--color-yellow);
  font-weight: 800;
}
#hud > #score img
{
  width: auto;
  height: 60%;
  margin-right: 10px;
}
#hud > #header 
{
  width: 40%;
  height: 75%;
  display: flex;
}
#hud > #header img
{
  width: 100%;
  height: auto;
}
#hud > #level
{
  height: 100%;
  width: 15%;
  display: flex;
  padding-right: 4%;
  align-items: center;
  flex-direction: row;
  justify-content: center;
}
#hud > #level p
{
  font-size: 1.2em;
  color: var(--color-white);
  font-weight: 800;
}
#hud > #level > #goalLevel
{
  color: var(--color-yellow);
  margin-right: 10px;
}
#levelIcon
{
  padding-left: 10%;
  height: 65%;
  display: flex;
}
#level > .character-portrait
{
  position: relative;
  height: 70%;
  margin-bottom: 8px;
  width: 40%;
  border-radius: 250px;
  overflow: hidden;
}
#level > .character-portrait img 
{
  z-index: 10;
  position: absolute;
  width: 150%;
}
#level .characterBackground 
{
  position: absolute;
  width: 100%;
  aspect-ratio: 1;
  background-color: #fff600;
  border-radius: 200px;
  bottom: 0%;
}
.gainScore 
{
  position: absolute;

  z-index: 999;
  display: flex;
  opacity: 0;
  transform: translateY(20px);
  transition:
    opacity 0.3s ease,
    transform 0.3s ease;
}
.gainScore.show {
  opacity: 1;
  transform: translateY(0);
}
.gainScore.exit {
  opacity: 0;
  transform: translateY(-20px);
}
.gainScore.hidden {
  display: none;
}
.gainScore > div
{
  background-color: var(--color-green);
  width: 100%;
  height: 100%;
  border-radius: 100px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.gainScore p 
{
  font-size: 1.4em;
  color: var(--color-yellow);
  font-weight: 800;
}
/* HUD---------------------------------------------------------*/

#gamePanel 
{
  position: relative;
  width: 100%;
  height: 80%;
  background-color: var(--color-white);
  border-radius: var(--round-corners);

  display: flex;
  justify-content: center;
  align-items: center;

  overflow: hidden;
}
.layoutGame 
{
  position: relative;
  width: 85%;
  height: 94%;

  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: nowrap;
  justify-content: space-between;
}
/* QUESTION ELEMENTS ----------------------------------------------------------------------------------------------- */
#question-container 
{
  position: relative;
  width: 100%;
  height: 85%;
}

#question-type-a
{
  display: flex;
  position: relative;
  width: 100%;
  height: 100%;
  align-self: stretch;
  justify-content: space-around;
  justify-self: auto;
  border-radius: 25px;
  flex-direction: column;
  align-items: center;
}
#question-type-a .question-header
{
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 8%;
  margin-bottom: 3%;
}
#question-type-a .question-header img {
  height: 100%;
  aspect-ratio: 1;
  object-fit: cover;
  background-color: var(--color-olive);
  border-radius: 100%;
}
#question-type-a .question-profile {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 60%;
  justify-content: center;
  margin-left: 2%;
  gap: 8%;
}
#question-type-a .question-profile h3 {
  font-family: Karla;
  font-weight: 700;
  color: var(--color-olive);
  font-size: var(--font-size-body);
  margin: 0px;
}
#question-type-a .question-profile p {
  font-family: Karla;
  font-weight: 400;
  color: var(--color-olive);
  font-size: var(--font-size-body);
  opacity: 0.6;
  margin: 0px;
}
#question-type-a .question-content-type-a
{
  display: flex;
  width: 100%;
  height: 87%;

  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#question-type-a .question-content-type-b 
{
  display: flex;
  width: 100%;
  height: 87%;

  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#question-type-a .question-content-type-b img 
{
  position: relative;
  width: 100%;
  height:  auto;
}
#question-type-a .question-image {
  width: 100%;
  height: 60%;
}
#question-type-a .question-image img {
  width: 100%;
  height: 90%;
  object-fit: cover;
  background-color: var(--color-olive);
  border-radius: var(--round-corners);
}
#question-type-a .question-image p {
  font-family: Karla;
  font-weight: 400;
  color: var(--color-olive);
  font-size: var(--font-size-body);
  opacity: 0.6;
  text-align: end;
  margin-bottom: 0;
  margin-right: 0.7em;
  margin-top: 0.7em;
}
#question-type-a .question-body{
  height: 40%;
  width: 98%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}
#question-type-a .question-body h3 {
  font-family: Karla;
  font-weight: 700;
  color: var(--color-olive);
  font-size: var(--font-size-header);
  margin-bottom: 0px;
}
/* ... */

